# Test

./: .env.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
src/: main.py
src/database/: db.py  models.py  repository.py
src/ml/: evaluator.py  model_manager.py  predictor.py  trainer.py
src/notifications/: email_sender.py
src/preprocessing/: cleaner.py  dataset_builder.py  feature_engineering.py
src/reporting/: report_generator.py  visualizations.py
src/scraper/: historical_loader.py  smard_client.py  validators.py
src/utils/: config.py  exceptions.py  logger.py
tests/: test_database.py  test_ml.py  test_preprocessing.py  test_scraper.py
